internal/consumer/generic/parser.rl
// Licensed to Elasticsearch B.V. under one or more agreements.
// Elasticsearch B.V. licenses this file to you under the Apache 2.0 License.
// See the LICENSE file in the project root for more information.

// Code generated by ragel. DO NOT EDIT.
package generic

%%{
	machine parser;

	action append_match {
		matches = append(matches, match{
			Start: ts,
			End: te,
		})
	}

	ident_start = [a-zA-Z_@*];
	ident_char  = [a-zA-Z0-9_];
	dot_seg     = ident_start ( ident_char | '*' )*;

	dotted_field = dot_seg ( '.' dot_seg '?'?)+;
	at_field = '@' ident_char+;

	main := |*
		dotted_field => append_match;
		at_field => append_match;
		any;
	*|;

	write data;
}%%

func parseFields(data []byte) []match {
	var matches []match

	cs, p, pe, eof := 0, 0, len(data), len(data)
	ts, te, act := 0, 0, 0
	_ = act

	%%write init;
	%%write exec;

	return matches
}
