internal/consumer/generic/parser_gen.go
// Licensed to Elasticsearch B.V. under one or more agreements.
// Elasticsearch B.V. licenses this file to you under the Apache 2.0 License.
// See the LICENSE file in the project root for more information.

// Code generated by ragel. DO NOT EDIT.
package generic


//line parser_gen.go:8
const parser_start int = 2
const parser_first_final int = 2
const parser_error int = -1

const parser_en_main int = 2


//line parser.rl:28


func parseFields(data []byte) []match {
	var matches []match

	cs, p, pe, eof := 0, 0, len(data), len(data)
	ts, te, act := 0, 0, 0
	_ = act

	
//line parser_gen.go:27
	{
	cs = parser_start
	ts = 0
	te = 0
	act = 0
	}

//line parser.rl:38
	
//line parser_gen.go:37
	{
	if p == pe {
		goto _test_eof
	}
	switch cs {
	case 2:
		goto st_case_2
	case 3:
		goto st_case_3
	case 0:
		goto st_case_0
	case 1:
		goto st_case_1
	case 4:
		goto st_case_4
	case 5:
		goto st_case_5
	case 6:
		goto st_case_6
	}
	goto st_out
tr0:
//line NONE:1
	switch act {
	case 1:
	{p = (te) - 1

		matches = append(matches, match{
			Start: ts,
			End: te,
		})
	}
	case 2:
	{p = (te) - 1

		matches = append(matches, match{
			Start: ts,
			End: te,
		})
	}
	default:
	{p = (te) - 1
}
	}
	
	goto st2
tr4:
//line parser.rl:24
te = p+1

	goto st2
tr7:
//line parser.rl:24
te = p
p--

	goto st2
tr8:
//line parser.rl:7
te = p
p--
{
		matches = append(matches, match{
			Start: ts,
			End: te,
		})
	}
	goto st2
	st2:
//line NONE:1
ts = 0

		if p++; p == pe {
			goto _test_eof2
		}
	st_case_2:
//line NONE:1
ts = p

//line parser_gen.go:117
		switch data[p] {
		case 42:
			goto tr5
		case 64:
			goto tr6
		case 95:
			goto tr5
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr5
			}
		case data[p] >= 65:
			goto tr5
		}
		goto tr4
tr5:
//line NONE:1
te = p+1

//line parser.rl:24
act = 3;
	goto st3
	st3:
		if p++; p == pe {
			goto _test_eof3
		}
	st_case_3:
//line parser_gen.go:147
		switch data[p] {
		case 42:
			goto st0
		case 46:
			goto st1
		case 95:
			goto st0
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st0
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st0
			}
		default:
			goto st0
		}
		goto tr7
	st0:
		if p++; p == pe {
			goto _test_eof0
		}
	st_case_0:
		switch data[p] {
		case 42:
			goto st0
		case 46:
			goto st1
		case 95:
			goto st0
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto st0
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto st0
			}
		default:
			goto st0
		}
		goto tr0
	st1:
		if p++; p == pe {
			goto _test_eof1
		}
	st_case_1:
		switch data[p] {
		case 42:
			goto tr3
		case 95:
			goto tr3
		}
		switch {
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr3
			}
		case data[p] >= 64:
			goto tr3
		}
		goto tr0
tr3:
//line NONE:1
te = p+1

//line parser.rl:7
act = 1;
	goto st4
	st4:
		if p++; p == pe {
			goto _test_eof4
		}
	st_case_4:
//line parser_gen.go:227
		switch data[p] {
		case 42:
			goto tr3
		case 46:
			goto st1
		case 63:
			goto tr9
		case 95:
			goto tr3
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr3
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr3
			}
		default:
			goto tr3
		}
		goto tr8
tr9:
//line NONE:1
te = p+1

//line parser.rl:7
act = 1;
	goto st5
	st5:
		if p++; p == pe {
			goto _test_eof5
		}
	st_case_5:
//line parser_gen.go:263
		if data[p] == 46 {
			goto st1
		}
		goto tr8
tr6:
//line NONE:1
te = p+1

//line parser.rl:24
act = 3;
	goto st6
tr10:
//line NONE:1
te = p+1

//line parser.rl:7
act = 2;
	goto st6
	st6:
		if p++; p == pe {
			goto _test_eof6
		}
	st_case_6:
//line parser_gen.go:287
		switch data[p] {
		case 42:
			goto st0
		case 46:
			goto st1
		case 95:
			goto tr10
		}
		switch {
		case data[p] < 65:
			if 48 <= data[p] && data[p] <= 57 {
				goto tr10
			}
		case data[p] > 90:
			if 97 <= data[p] && data[p] <= 122 {
				goto tr10
			}
		default:
			goto tr10
		}
		goto tr0
	st_out:
	_test_eof2: cs = 2; goto _test_eof
	_test_eof3: cs = 3; goto _test_eof
	_test_eof0: cs = 0; goto _test_eof
	_test_eof1: cs = 1; goto _test_eof
	_test_eof4: cs = 4; goto _test_eof
	_test_eof5: cs = 5; goto _test_eof
	_test_eof6: cs = 6; goto _test_eof

	_test_eof: {}
	if p == eof {
		switch cs {
		case 3:
			goto tr7
		case 0:
			goto tr0
		case 1:
			goto tr0
		case 4:
			goto tr8
		case 5:
			goto tr8
		case 6:
			goto tr0
		}
	}

	}

//line parser.rl:39

	return matches
}
